--- a/test-page/index.html
+++ b/test-page/index.html
@@ -6,7 +6,7 @@
 
         <script type = 'text/javascript' src = 'https://d3js.org/d3.v3.min.js'></script>
         <script type = 'text/javascript' src = 'https://rawgit.com/RhoInc/Webcharts/master/build/webcharts.js'></script>
-        <script type = 'text/javascript' src = 'https://rawgit.com/RhoInc/safety-shift-plot/master/build/safetyShiftPlot.js'></script>
+        <script type = 'text/javascript' src = '../build/safetyShiftPlot.js'></script>
 
         <link type = 'text/css' rel = 'stylesheet' href = 'https://rawgit.com/RhoInc/Webcharts/master/css/webcharts.css'>
         <link type = 'text/css' rel = 'stylesheet' href = './index.css'>
